fix: add missing gap in thr cart page card

--- a/src/modules/CartPage/components/CartProductCard/CartProductCard.module.scss
+++ b/src/modules/CartPage/components/CartProductCard/CartProductCard.module.scss
@@ -11,6 +11,7 @@
 
   @include on-tablet {
     flex-direction: row;
+    gap: 16px;
     padding: 24px;
   }
 }
